--- a/home.html
+++ b/home.html
@@ -237,6 +237,37 @@
     ]
   },
   {
+    "title": "Quan chức Mỹ: Vũ khí hạt nhân Ukraine từ bỏ 30 năm trước là của Nga",
+    "content": "Một quan chức Mỹ, ông Richard Grenell, đã tuyên bố rằng số vũ khí hạt nhân mà Ukraine từng từ bỏ sau khi Liên Xô tan rã là thuộc về Nga, không phải Ukraine. Ông nhấn mạnh rằng Ukraine đã trả lại vũ khí hạt nhân cho Nga theo Bản Ghi nhớ Budapest năm 1994, và cho rằng việc từ bỏ vũ khí này là một sai lầm của Kiev. Tổng thống Zelensky cũng đã bày tỏ sự nuối tiếc về quyết định này và cho rằng Ukraine nên yêu cầu gia nhập NATO thay vì từ bỏ vũ khí hạt nhân.",
+    "link": "https://dantri.com.vn/the-gioi/quan-chuc-my-vu-khi-hat-nhan-ukraine-tu-bo-30-nam-truoc-la-cua-nga-20250326114657527.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Vũ khí hạt nhân mà Ukraine từng từ bỏ thuộc về quốc gia nào?",
+    "answers": [
+      {
+        "text": "Nga",
+        "correct": true
+      },
+      {
+        "text": "Ukraine",
+        "correct": false
+      },
+      {
+        "text": "Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Anh",
+        "correct": false
+      },
+      {
+        "text": "Pháp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vụ con dấu của Trường đại học Kinh Bắc: Công an yêu cầu trả lại cho hiệu trưởng",
     "content": "Công an tỉnh Bắc Ninh yêu cầu bà Nguyễn Thị Tuyết Hồng, người giữ con dấu của Trường đại học Kinh Bắc, phải bàn giao lại con dấu cho hiệu trưởng Nguyễn Văn Hòa. Việc bà Hồng tự ý bãi nhiệm chức danh của ông Tiếp và ông Hòa được xác định là trái quy định pháp luật. Công an cũng yêu cầu trường rà soát và thu hồi các văn bản sử dụng con dấu không đúng quy định.",
     "link": "https://tuoitre.vn/vu-con-dau-cua-truong-dai-hoc-kinh-bac-cong-an-yeu-cau-tra-lai-cho-hieu-truong-20250326112357987.htm",
@@ -1060,6 +1091,33 @@
     ]
   },
   {
+    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
+    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
+    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
+    "answers": [
+      {
+        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng không cần phải lo lắng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
     "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
     "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
@@ -1113,33 +1171,6 @@
       },
       {
         "text": "80 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
-    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
-    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
-    "answers": [
-      {
-        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
-        "correct": true
-      },
-      {
-        "text": "Không, đây chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng không cần phải lo lắng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
         "correct": false
       }
     ]
@@ -1234,33 +1265,6 @@
     ]
   },
   {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -1287,6 +1291,33 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
@@ -2239,33 +2270,6 @@
     ]
   },
   {
-    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
-    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
-    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
-    "cat": "oto-xe-may",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
-    "answers": [
-      {
-        "text": "Do lái xe với tốc độ cao và không kiểm soát",
-        "correct": true
-      },
-      {
-        "text": "Vì xe điện không an toàn",
-        "correct": false
-      },
-      {
-        "text": "Do đường phố không đủ ánh sáng",
-        "correct": false
-      },
-      {
-        "text": "Vì tài xế không có kinh nghiệm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự kiến phương án sắp xếp phường xã 22 quận huyện của TP HCM",
     "content": "TP HCM đang dự kiến thực hiện phương án sắp xếp lại các phường và xã tại 22 quận huyện, theo đó quận 3 và huyện Hóc Môn có thể trở thành một phường và xã. TP Thủ Đức sẽ chuyển thành 9 phường mới, trong khi nhiều quận nội đô sẽ được tổ chức lại thành 2-3 phường. Mục tiêu của kế hoạch này là giảm số đơn vị hành chính từ 273 xuống còn hơn 80, nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý.",
     "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-22-quan-huyen-cua-tp-hcm-4865782.html",
@@ -2288,6 +2292,33 @@
       },
       {
         "text": "100 phường và xã",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
+    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
+    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
+    "cat": "oto-xe-may",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
+    "answers": [
+      {
+        "text": "Do lái xe với tốc độ cao và không kiểm soát",
+        "correct": true
+      },
+      {
+        "text": "Vì xe điện không an toàn",
+        "correct": false
+      },
+      {
+        "text": "Do đường phố không đủ ánh sáng",
+        "correct": false
+      },
+      {
+        "text": "Vì tài xế không có kinh nghiệm",
         "correct": false
       }
     ]
@@ -3271,6 +3302,33 @@
     ]
   },
   {
+    "title": "Kháng insulin gây mụn trứng cá thế nào",
+    "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
+    "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Kháng insulin ảnh hưởng đến mụn trứng cá như thế nào?",
+    "answers": [
+      {
+        "text": "Kháng insulin làm tăng hormone androgen, gây ra mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Kháng insulin không có ảnh hưởng đến mụn trứng cá.",
+        "correct": false
+      },
+      {
+        "text": "Kháng insulin chỉ gây ra các vấn đề về tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Kháng insulin làm giảm bã nhờn trên da.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
     "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
     "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
@@ -3297,33 +3355,6 @@
       },
       {
         "text": "Giải thí sinh được yêu thích nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Kháng insulin gây mụn trứng cá thế nào",
-    "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
-    "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Kháng insulin ảnh hưởng đến mụn trứng cá như thế nào?",
-    "answers": [
-      {
-        "text": "Kháng insulin làm tăng hormone androgen, gây ra mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Kháng insulin không có ảnh hưởng đến mụn trứng cá.",
-        "correct": false
-      },
-      {
-        "text": "Kháng insulin chỉ gây ra các vấn đề về tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Kháng insulin làm giảm bã nhờn trên da.",
         "correct": false
       }
     ]
