--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Hãng hàng không mở thêm nhiều đường bay quốc tế",
+    "content": "Vietnam Airlines đã công bố mở thêm nhiều đường bay quốc tế mới, bao gồm các chuyến bay đến Ấn Độ, Indonesia và Nga, với tần suất từ 3-4 chuyến mỗi tuần. Đặc biệt, hãng sẽ khai thác đường bay thẳng từ Hà Nội đến Milan (Italy) từ tháng 7, nâng tổng số đường bay thẳng đến châu Âu lên 9. Đồng thời, Vietjet Air cũng mở mới các đường bay đến Trung Quốc, Nhật Bản và Singapore, đáp ứng nhu cầu di chuyển tăng cao trong năm 2025.",
+    "link": "https://vnexpress.net/hang-hang-khong-mo-them-nhieu-duong-bay-quoc-te-4865993.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hãng hàng không nào mở thêm nhiều đường bay quốc tế gần đây?",
+    "answers": [
+      {
+        "text": "Vietnam Airlines",
+        "correct": true
+      },
+      {
+        "text": "Bamboo Airways",
+        "correct": false
+      },
+      {
+        "text": "Pacific Airlines",
+        "correct": false
+      },
+      {
+        "text": "Vietjet Air",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Công ty của tỉ phú Elon Musk được thí điểm dịch vụ internet vệ tinh Starlink tại Việt Nam",
     "content": "Tập đoàn SpaceX của Elon Musk vừa được Thủ tướng Chính phủ Việt Nam phê duyệt thí điểm dịch vụ internet vệ tinh Starlink tại Việt Nam, với thời gian thực hiện đến ngày 1-1-2031. Dự án này cho phép SpaceX đầu tư và cung cấp dịch vụ viễn thông vệ tinh, bao gồm internet trên biển và máy bay, với tối đa 600.000 thuê bao. Việc triển khai sẽ được kiểm soát để đảm bảo tuân thủ các yêu cầu về quốc phòng và an ninh.",
     "link": "https://tuoitre.vn/thu-tuong-dong-y-cho-spacex-duoc-thi-diem-dich-vu-internet-ve-tinh-starlink-2025032612010695.htm",
@@ -174,6 +201,37 @@
       },
       {
         "text": "Internet băng thông rộng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lực lượng vũ trang làm công việc đặc biệt có thể hưởng hưu trí vượt trội",
+    "content": "Bộ Quốc phòng đã đề xuất một chính sách mới cho lực lượng vũ trang làm công việc đặc biệt, cho phép họ hưởng chế độ hưu trí vượt trội hơn so với lao động bình thường. Theo đó, những người này nếu đóng bảo hiểm xã hội (BHXH) đủ 20 năm sẽ được hưởng lương hưu 65%, và mỗi năm tham gia thêm sẽ được cộng 3%. Mức hưởng tối đa có thể đạt 75%. Đề xuất này nhằm ghi nhận tính chất đặc thù của công việc trong môi trường áp lực cao của lực lượng vũ trang.",
+    "link": "https://vnexpress.net/luc-luong-vu-trang-lam-cong-viec-dac-biet-co-the-huong-huu-tri-vuot-troi-4865780.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Lực lượng vũ trang làm công việc đặc biệt sẽ được hưởng chế độ hưu trí như thế nào?",
+    "answers": [
+      {
+        "text": "Hưởng lương hưu 65% cho 20 năm đóng BHXH, mỗi năm thêm 3%",
+        "correct": true
+      },
+      {
+        "text": "Hưởng lương hưu 50% cho 20 năm đóng BHXH",
+        "correct": false
+      },
+      {
+        "text": "Không được hưởng chế độ hưu trí đặc biệt nào",
+        "correct": false
+      },
+      {
+        "text": "Hưởng lương hưu như lao động bình thường",
+        "correct": false
+      },
+      {
+        "text": "Hưởng lương hưu 75% cho 15 năm đóng BHXH",
         "correct": false
       }
     ]
@@ -1756,37 +1814,6 @@
     ]
   },
   {
-    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
-    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
-    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
-    "answers": [
-      {
-        "text": "Central Bay tại Eco Central Park",
-        "correct": true
-      },
-      {
-        "text": "Milan Workspace",
-        "correct": false
-      },
-      {
-        "text": "Hanoi Creative Space",
-        "correct": false
-      },
-      {
-        "text": "Saigon Coworking Center",
-        "correct": false
-      },
-      {
-        "text": "Da Nang Office Hub",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu cơ vân do tập squat quá sức",
     "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
     "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
@@ -1844,6 +1871,37 @@
       },
       {
         "text": "Bệnh tiểu đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
+    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
+    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
+    "answers": [
+      {
+        "text": "Central Bay tại Eco Central Park",
+        "correct": true
+      },
+      {
+        "text": "Milan Workspace",
+        "correct": false
+      },
+      {
+        "text": "Hanoi Creative Space",
+        "correct": false
+      },
+      {
+        "text": "Saigon Coworking Center",
+        "correct": false
+      },
+      {
+        "text": "Da Nang Office Hub",
         "correct": false
       }
     ]
@@ -2459,37 +2517,6 @@
     ]
   },
   {
-    "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
-    "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
-    "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Huế được giải phóng vào ngày nào trong năm 1975?",
-    "answers": [
-      {
-        "text": "25/3/1975",
-        "correct": true
-      },
-      {
-        "text": "26/3/1975",
-        "correct": false
-      },
-      {
-        "text": "15/5/1975",
-        "correct": false
-      },
-      {
-        "text": "1/1/2025",
-        "correct": false
-      },
-      {
-        "text": "20/4/1975",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sáp nhập tỉnh thành nên dựa vào nguyên tắc nào?",
     "content": "Chuyên gia đề xuất các nguyên tắc sáp nhập tỉnh thành tại Việt Nam, tập trung vào việc tăng số lượng địa phương có biển, nâng cao sức mạnh kinh tế và đảm bảo an ninh quốc phòng. Việc sáp nhập nhằm giảm số lượng đơn vị hành chính cấp tỉnh từ 63 xuống còn khoảng một nửa, đồng thời tạo động lực phát triển bền vững cho các địa phương. Các tiêu chí sáp nhập không chỉ dựa vào quy mô dân số và diện tích mà còn cần nghiên cứu kỹ lưỡng về quy hoạch tổng thể và chiến lược phát triển kinh tế xã hội.",
     "link": "https://vnexpress.net/sap-nhap-tinh-thanh-nen-dua-vao-nguyen-tac-nao-4865684.html",
@@ -2516,6 +2543,37 @@
       },
       {
         "text": "Tạo ra nhiều đơn vị hành chính mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cố đô Huế những ngày giải phóng 50 năm trước",
+    "content": "Ngày 25/3/1975, lá cờ của Quân Giải phóng miền Nam Việt Nam đã được cắm trên Kỳ đài, đánh dấu sự giải phóng hoàn toàn của cố đô Huế. Chiến dịch Huế - Đà Nẵng được thực hiện sau khi giải phóng Buôn Ma Thuột, với mục tiêu giải phóng các thành phố quan trọng này. Sau 50 năm, Huế đã trở thành một đô thị di sản hàng đầu của Việt Nam với 8 di sản văn hóa thế giới được UNESCO công nhận.",
+    "link": "https://vnexpress.net/co-do-hue-nhung-ngay-giai-phong-50-nam-truoc-4865641.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Huế được giải phóng vào ngày nào trong năm 1975?",
+    "answers": [
+      {
+        "text": "25/3/1975",
+        "correct": true
+      },
+      {
+        "text": "26/3/1975",
+        "correct": false
+      },
+      {
+        "text": "15/5/1975",
+        "correct": false
+      },
+      {
+        "text": "1/1/2025",
+        "correct": false
+      },
+      {
+        "text": "20/4/1975",
         "correct": false
       }
     ]
@@ -2927,33 +2985,6 @@
     ]
   },
   {
-    "title": "Những bệnh HPV gây ra ở nam giới",
-    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
-    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
-    "answers": [
-      {
-        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
-        "correct": true
-      },
-      {
-        "text": "Cúm, sởi, quai bị",
-        "correct": false
-      },
-      {
-        "text": "Tiểu đường, tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tim mạch, đột quỵ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
     "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
     "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
@@ -2976,6 +3007,33 @@
       },
       {
         "text": "Để tạo sự chú ý cho truyền thông.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những bệnh HPV gây ra ở nam giới",
+    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
+    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
+    "answers": [
+      {
+        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
+        "correct": true
+      },
+      {
+        "text": "Cúm, sởi, quai bị",
+        "correct": false
+      },
+      {
+        "text": "Tiểu đường, tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tim mạch, đột quỵ",
         "correct": false
       }
     ]
@@ -3329,6 +3387,37 @@
     ]
   },
   {
+    "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
+    "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
+    "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Ngọc Hà đã giành giải gì trong cuộc thi hát trực tuyến \"Bài ca thống nhất\"?",
+    "answers": [
+      {
+        "text": "Giải nhất",
+        "correct": true
+      },
+      {
+        "text": "Giải nhì",
+        "correct": false
+      },
+      {
+        "text": "Giải ba",
+        "correct": false
+      },
+      {
+        "text": "Giải khuyến khích",
+        "correct": false
+      },
+      {
+        "text": "Giải thí sinh được yêu thích nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cách làm món cà chua nhồi thịt",
     "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
     "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
@@ -3378,37 +3467,6 @@
       },
       {
         "text": "Kháng insulin làm giảm bã nhờn trên da.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
-    "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
-    "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Ngọc Hà đã giành giải gì trong cuộc thi hát trực tuyến \"Bài ca thống nhất\"?",
-    "answers": [
-      {
-        "text": "Giải nhất",
-        "correct": true
-      },
-      {
-        "text": "Giải nhì",
-        "correct": false
-      },
-      {
-        "text": "Giải ba",
-        "correct": false
-      },
-      {
-        "text": "Giải khuyến khích",
-        "correct": false
-      },
-      {
-        "text": "Giải thí sinh được yêu thích nhất",
         "correct": false
       }
     ]
@@ -4568,60 +4626,6 @@
       },
       {
         "text": "Vì nhà thầu không hỗ trợ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Runner 15 tuổi bán đấu giá giày phá kỷ lục",
-    "content": "Sam Ruthe, một runner 15 tuổi ở New Zealand, đã bán đấu giá đôi giày Nike Dragonfly 2 Elite của mình trên Trade Me sau khi lập kỷ lục trở thành VĐV trẻ nhất chạy 1 dặm dưới 4 phút. Đôi giày được đấu giá để gây quỹ cho huấn luyện viên và đồng đội, với giá hiện tại hơn 3.100 USD. Ruthe đã hoàn thành cự ly 1 dặm với thời gian 3 phút 58 giây 35, phá vỡ kỷ lục trước đó của Jakob Ingebrigtsen và trở thành một niềm hy vọng lớn trong làng điền kinh.",
-    "link": "https://vnexpress.net/runner-15-tuoi-ban-dau-gia-giay-pha-ky-luc-4865561.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sam Ruthe đã lập kỷ lục gì khi chạy 1 dặm?",
-    "answers": [
-      {
-        "text": "Chạy 1 dặm dưới 4 phút",
-        "correct": true
-      },
-      {
-        "text": "Chạy 1 dặm trên 5 phút",
-        "correct": false
-      },
-      {
-        "text": "Chạy 1 dặm dưới 5 phút",
-        "correct": false
-      },
-      {
-        "text": "Chạy 1 dặm trong 6 phút",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Runner Trung Quốc mất chức vô địch vì mừng sớm",
-    "content": "Xiao Fen, một runner Trung Quốc, đã mất chức vô địch tại giải half marathon Trùng Khánh 2025 khi cô giơ tay ăn mừng sớm trước vạch đích. Dù đã dẫn đầu suốt chặng đua, cô bị Gan Zhifang vượt qua ngay giây cuối cùng và chỉ về đích thứ hai. Fen cho biết cô đã rất bất cẩn và xem đây là một bài học quan trọng để không bao giờ mừng sớm nữa.",
-    "link": "https://vnexpress.net/runner-trung-quoc-mat-chuc-vo-dich-vi-mung-som-4865535.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Xiao Fen lại mất chức vô địch tại giải half marathon?",
-    "answers": [
-      {
-        "text": "Vì cô ăn mừng sớm trước vạch đích.",
-        "correct": true
-      },
-      {
-        "text": "Vì cô bị chấn thương khi chạy.",
-        "correct": false
-      },
-      {
-        "text": "Vì cô không hoàn thành đủ quãng đường.",
-        "correct": false
-      },
-      {
-        "text": "Vì cô không tập luyện đủ chăm chỉ.",
         "correct": false
       }
     ]
